# authentication_database_web_ui

./: .gitignore  Cargo-auto.toml  README.md  cache2.txt  subtitles.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
common_code/: .auto_version_from_date.json  Cargo.toml
common_code/automation_tasks_rs/: Cargo.toml
common_code/automation_tasks_rs/src/: main.rs
common_code/src/: lib.rs
db_backup/: backup_and_restore.md  webpage_hit_counter_2022_10_20.tar  webpage_hit_counter_2022_10_26.tar  webpage_hit_counter_2022_11_07.tar  webpage_hit_counter_2022_11_09.tar
temp/: obsolete_web_sys_mod.txt
tier0_common_code/: .auto_version_from_date.json  Cargo.toml
tier0_common_code/automation_tasks_rs/src/: main.rs
tier0_common_code/src/: lib.rs
tier1_browser_wasm/: .auto_version_from_date.json  Cargo.toml
tier1_browser_wasm/automation_tasks_rs/src/: main.rs
tier1_browser_wasm/src/: a4_system_mod.rs  authn_login_mod.rs  authn_mod.rs  authn_signup_mod.rs  b1_authn_signup_mod.rs  b2_authn_login_mod.rs  lib.rs  web_sys_html_encode_mod.rs  web_sys_mod.rs
tier2_library_for_web_app/: .auto_version_from_date.json  Cargo.toml
tier2_library_for_web_app/automation_tasks_rs/src/: main.rs
tier2_library_for_web_app/src/: actix_mod.rs  app_state_mod.rs  deadpool_mod.rs  error_mod.rs  html_templating_mod.rs  lib.rs  postgres_function_mod.rs  postgres_mod.rs  postgres_select_query_mod.rs  postgres_type_mod.rs  rust_named_params_for_sql_mod.rs  sendgrid_mod.rs  server_side_multi_row_mod.rs  server_side_single_row_mod.rs  sql_params_mod.rs  web_params_mod.rs
tier2_web_server_actix_postgres/: .auto_version_from_date.json  Cargo.toml
tier2_web_server_actix_postgres/automation_tasks_rs/: Cargo.toml
tier2_web_server_actix_postgres/automation_tasks_rs/src/: main.rs
tier2_web_server_actix_postgres/src/: actix_mod.rs  app_state_mod.rs  authn_login_mod.rs  authn_mod.rs  authn_signup_mod.rs  b1_authn_signup_mod.rs  b2_authn_login_mod.rs  c1_webpage_hits_mod.rs  deadpool_mod.rs  error_mod.rs  html_templating_mod.rs  lib.rs  postgres_function_mod.rs  postgres_mod.rs  postgres_select_query_mod.rs  postgres_type_mod.rs  server_side_multi_row_mod.rs  server_side_single_row_mod.rs  sql_params_mod.rs  web_params_mod.rs  webpage_hits_mod.rs
tier2_web_server_actix_postgres/src/a0_library_mod/: actix_mod.rs  app_state_mod.rs  deadpool_mod.rs  error_mod.rs  html_templating_mod.rs  mod.rs  postgres_function_mod.rs  postgres_mod.rs  postgres_select_query_mod.rs  postgres_type_mod.rs  server_side_multi_row_mod.rs  server_side_single_row_mod.rs  sql_params_mod.rs  web_params_mod.rs
tier2_webpage_hits_admin/: .auto_version_from_date.json  Cargo.toml
tier2_webpage_hits_admin/automation_tasks_rs/src/: main.rs
tier2_webpage_hits_admin/src/: a4_system_mod.rs  b1_authn_signup_mod.rs  b2_authn_login_mod.rs  b5_start_page_mod.rs  c1_webpage_hits_mod.rs  main.rs
tier3_database_postgres/: README.md  migrate_check.sql  migrate_update_database.sh  tmp_migration_check.txt  tmp_migration_result.txt
tier3_database_postgres/a0_init_mod/: a0_create_database_and_migration_mechanism.sql  a0_danger_drop_database.sql  a0_init_database_and_migration_mechanism.sql  a0_migrate_update_database.sh
tier3_database_postgres/a1_list_mod/: a1_drop_function_any_param.sql_fn  a1_list_all_constraints_foreign.sql_vw  a1_list_all_constraints_unique.sql_vw  a1_list_all_function_input_params.sql_vw  a1_list_all_functions.sql_vw  a1_list_all_table_field_definition.sql_vw  a1_list_all_tables.sql_vw  a1_list_all_view_fields.sql_vw  a1_list_all_views.sql_vw  a1_migrate_update_database.sh
tier3_database_postgres/a2_migrate_mod/: a2_migrate_column.sql_fn  a2_migrate_constraint_foreign.sql_fn  a2_migrate_constraint_unique.sql_fn  a2_migrate_function.sql_fn  a2_migrate_table.sql_fn  a2_migrate_update_database.sh  a2_migrate_view.sql_fn  a2_source_code.sql_tb
tier3_database_postgres/a3_check_mod/: a3_check_function_overload.sql_vw  a3_check_multi_column_foreign.sql_vw  a3_check_multi_column_unique.sql_vw  a3_check_parameter_types.sql_vw  a3_check_table_field_type.sql_vw  a3_check_view_field_type.sql_vw  a3_migrate_update_database.sh
tier3_database_postgres/a4_system_mod/: a4_migrate_update_database.sh  a4_random_between.sql_fn
tier3_database_postgres/authn/: authn_login.sql_tb  authn_login_show.sql_fn  authn_signup.sql_tb  authn_signup_delete.sql_fn  authn_signup_insert.sql_fn  fn_authn_login_show.sql  tb_authn_login.sql
tier3_database_postgres/b1_authn_signup_mod/: b1_authn_signup.sql_tb  b1_authn_signup_allowed_email.sql_fn  b1_authn_signup_delete.sql_fn  b1_authn_signup_email_verification.sql_fn  b1_authn_signup_insert.sql_fn  b1_authn_signup_process_email.sql_fn  b1_migrate_update_database.sh
tier3_database_postgres/b2_authn_login_mod/: b2_authn_login.sql_tb  b2_authn_login_insert.sql_fn  b2_authn_login_migrate.sql  b2_authn_login_show.sql_fn  b2_migrate_authn_login.sql_fn  b2_migrate_update_database.sh
tier3_database_postgres/b3_authn_role_mod/: b3_authn_login_role.sql_tb  b3_authn_login_role_insert.sql_fn  b3_authn_login_role_migrate.sql  b3_authn_role.sql_tb  b3_authn_role_insert.sql_fn  b3_authn_role_migrate.sql  b3_migrate_authn_login_role.sql_fn  b3_migrate_authn_role.sql_fn  b3_migrate_update_database.sh
tier3_database_postgres/b4_authn_operation_mod/: b4_authn_operation.sql_tb  b4_authn_operation_insert.sql_fn  b4_authn_operation_migrate.sql  b4_authn_role_operation.sql_tb  b4_authn_role_operation_insert.sql_fn  b4_authn_role_operation_migrate.sql  b4_migrate_authn_operation.sql_fn  b4_migrate_authn_role_operation.sql_fn  b4_migrate_update_database.sh
tier3_database_postgres/c1_webpage_hits_mod/: c1_hit_counter.sql_tb  c1_migrate_update_database.sh  c1_webpage.sql_tb  c1_webpage_hits.sql_vw  c1_webpage_hits_delete.sql_fn  c1_webpage_hits_edit.sql_fn  c1_webpage_hits_insert.sql_fn  c1_webpage_hits_list.sql_vw  c1_webpage_hits_new.sql_fn  c1_webpage_hits_show.sql_fn  c1_webpage_hits_update.sql_fn
tmp/: temp2.txt
web_server_folder/: .env  .env_example
(+141 files in other folders)
