[package]
name = "common_code"
version = "2022.1020.1136"
description = "common code"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/authentication_database_web_ui"
categories = ["rust-patterns"]
keywords = ["tutorials"]
publish = false

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
