[package]
name = "tier0_common_code"
version = "2022.1205.922"
description = "common code"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/authentication_database_web_ui"
categories = ["rust-patterns"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["tutorials"]
publish = false

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }

