[package]
name = "tier1_browser_wasm"
version = "2022.1205.924"
description = "09. Tutorial to code authentication for database_web_ui (2022-10)"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/authentication_database_web_ui"
categories = ["rust-patterns"]
keywords = ["wasm", "tutorials"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
unwrap = "1.2.1"
anyhow = "1.0.66"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"
# js-sys = "0.3.60"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tier0_common_code = { path = "../tier0_common_code" }
argon2 = "0.4.1"
hex = "0.4.3"
aes-gcm = "0.10.1"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
  "AbortController",
  "console",
  "CharacterData",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSpanElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "Request",
  "RequestCache",
  "RequestInit",
  "RequestMode",
  "Response",
  "Screen",
  "Storage",
  "Text",
  "Window",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
