[package]
name = "tier2_library_for_web_app"
version = "2022.1205.1607"
description = "library for web app"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/authentication_database_web_ui"
categories = ["rust-patterns"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["tutorials"]
publish = false

[dependencies]
tier0_common_code = { path = "../tier0_common_code" }
log = "0.4"
thiserror = "1.0.30"
actix-web = "4.1.0"
mime="0.3.16"
tokio-postgres="0.7.6"
dotenv="0.15.0"
deadpool-postgres = "0.10.2"
html-escape = "0.2.11"
strum = { version = "0.24", features = ["derive"] }
regex="1.6.0"
lazy_static="1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
actix-utils = "3.0.1"
reqwest = { version = "0.11.12", features = ["json"] }
hex = "0.4.3"
aes-gcm = "0.10.1"
dirs = "4.0.0"
