[package]
name = "webpage_hits_admin"
version = "2022.1205.1558"
description = "09. Tutorial to code authentication for database_web_ui (2022-10)"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/authentication_database_web_ui"
categories = ["rust-patterns"]
keywords = ["tutorials"]
publish = false

[dependencies]
tier0_common_code = { path = "../tier0_common_code" }
tier2_library_for_web_app = { path = "../tier2_library_for_web_app" }
log = "0.4"
pretty_env_logger="0.4.0"
actix-web = "4.1.0"
tokio-postgres="0.7.6"
actix-files = "0.6.2"
function_name = "0.3.0"
futures = "0.3.24"
password-hash = "0.4.2"
uuid = {version = "1.2.1", features = ["v4","fast-rng"]}
dotenv="0.15.0"
lazy_static="1.4.0"
